fixed posts with images alignment

--- a/react-app/src/components/PostingOptions/PostingOptions.css
+++ b/react-app/src/components/PostingOptions/PostingOptions.css
@@ -76,7 +76,7 @@
 .post-title {
     overflow: hidden;
     height: 54px;
-    margin-bottom: 18px;
+    /* margin-bottom: 18px; */
 }
 
 .post-title {
@@ -101,19 +101,21 @@
 
 .first-single {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
 }
 
 .menu-box-post {
     width: 35px;
-    height: 70px;
+    height: 60px;
     /* display: flex;
     justify-content: flex-end; */
     margin: 0; 
 }
 
 .images-box {
-    width: 400px;
+    width: 529px;
+    display: flex;
+    justify-content: center;
 }
 
 .posts-button {
@@ -144,6 +146,13 @@
     font-size: 14px;
     margin-bottom: 0;
 }
+
+.posted-by-image {
+    font-family: "PT Serif";
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
 
 .ellipse {
     width: 20px;
